--- a/src/main/resources/templates/portal/iv/hq/parts/export/claim/create/reference/order/popup/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/claim/create/reference/order/popup/list.html
@@ -34,7 +34,7 @@
 				<th th:text="#{HQP_L_PART_NO}"></th>
 				<td>
 					<div class="input-area">
-						<input type="text" id="pPartNo" name="pPartNo" class="custom-ui" th:value="${pPartNo}">
+						<input type="text" id="pPartNo" name="pPartNo" class="custom-ui autocomplete" th:value="${pPartNo}">
 					</div>
 				</td>				
 			</tr>
@@ -58,7 +58,12 @@
 	</div>
 <script>
 $(document).ready(function() {
-	_setPartAutocomplete($("#pPartNo"));
+	_setPartAutocomplete($("#pPartNo"), {
+		select: function(label, value, event)
+		{
+			doSearch();
+		}
+	});	
 });
 
 $(function(){
@@ -117,19 +122,11 @@ $(function(){
 		doSearch();
 	});
 	
-	//Input text 엔터 키 입력
-	$("#FORM_search input:text").on("keydown", function(event) {
-		if (event.keyCode == 13)
-		{
-			doSearch();
-		};
+	//Input text 엔터 키 입력.
+	JpUiForm.input.on.enter($("#FORM_search input:text"), function(item) {
+		doSearch();
 	});	
 	
-	function doSearch()
-	{
-		$tableObj.ajax.reload();
-	};
-
 	$("#BTN_select").on("click", function() {
 		let tds = $tableObj.columns(0).nodes()[0];
 	
@@ -156,5 +153,10 @@ $(function(){
 		catch (e) {}
 	});
 });
+
+function doSearch()
+{
+	$tableObj.ajax.reload();
+};
 </script>
 </th:block>
