고도화 장바구니 기능 개발

--- a/src/main/resources/static/portal/css/layout/iv/hq/parts/basic.css
+++ b/src/main/resources/static/portal/css/layout/iv/hq/parts/basic.css
@@ -664,7 +664,7 @@ input.custom-ui[type="text"], input.custom-ui[type="number"]{
 input.custom-ui[type="text"].uppercase{
 	text-transform: uppercase; 
 }
-input.custom-ui[type="text"].warn{
+input.custom-ui[type="text"].warn, input.custom-ui[type="number"].warn{
 	background-color: #db2828;
 	color:#363636; 
 }
@@ -764,6 +764,17 @@ select::-ms-expand {
 img.required {
 	border: none;
 	margin-left:3px;
+}
+
+/* Hide arrow of the number type of the input element */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+input[type=number] {
+	-moz-appearance: textfield;
 }
 
 /*--- Text style ------------------*/
