--- a/src/main/resources/templates/platform/mgmt/authority/list.html
+++ b/src/main/resources/templates/platform/mgmt/authority/list.html
@@ -53,7 +53,6 @@
 	<div class="ui clearing divider"></div>
 	<div id="TAB_viewAuthorityDetail" class="ui secondary pointing menu">
 		<a class="item active wrap" data-tab="general">General</a>
-		<a class="item wrap" data-tab="user">User</a>
 		<a class="item wrap" data-tab="authority">Sub Authority</a>
 	</div>
 	<div class="AREA_moveToModifyAuthority" style="display:none;">
@@ -130,6 +129,10 @@ $(document).ready(function() {
 						initSeq();
 						hideUserDetailsArea();
 					};					
+				}
+				else if (columnIndex == 4)
+				{
+					_showUser({cSeq: key});
 				};
 			},
 			onClickPageNumber: function(pageNumber)
@@ -337,14 +340,6 @@ $(document).ready(function() {
 							$("a.authority").on("click", function() {
 								_showContent({
 									cSeq: $(this).attr("data-key")
-								});
-							});
-						}
-						else if (JpUtilsString.equals(tabPath, "user"))
-						{
-							$("a[data-key-name=uSeq]").on("click", function() {
-								_showUser({
-									uSeq: $(this).attr("data-key")
 								});
 							});
 						};
